--- a/view/service_form.xml
+++ b/view/service_form.xml
@@ -2,7 +2,6 @@
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
 <form string="Service" col="6" cursor="party">
-    <label name="type"/>
     <field name="type" invisible="1"/>
     <newline/>
     <label name="company"/>
@@ -53,6 +52,9 @@ this repository contains the full copyright notices and license terms. -->
     <newline/>
     <label name="total"/>
     <field name="total"/>
+    <newline/>
+    <label name="total_home_service"/>
+    <field name="total_home_service"/>
     <newline/>
     <group col="2" colspan="2" id="state">
         <label name="state"/>
