--- a/view/service_tree.xml
+++ b/view/service_tree.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<tree string="Services">
+<tree string="Services" colors="If(Equal(Eval('state_date', ''),'vencida'), 'red', 'black')">
     <field name="number_service"/>
     <field name="party"/>
     <field name="entry_date"/>
