--- a/view/service_tree.xml
+++ b/view/service_tree.xml
@@ -1,10 +1,12 @@
 <?xml version="1.0"?>
 <!-- This file is part of Tryton.  The COPYRIGHT file at the top level of
 this repository contains the full copyright notices and license terms. -->
-<tree string="Services" colors="If(Equal(Eval('state_date', ''),'vencida'), 'red', 'black')">
+<tree string="Services"
+    colors="If(Equal(Eval('state_date', ''),'vencida'), 'red', If(Equal(Eval('state_date', ''),'vence_hoy'), 'blue', 'black'))">
     <field name="number_service"/>
     <field name="party"/>
     <field name="entry_date"/>
     <field name="delivery_date"/>
     <field name="state"/>
+    <field name="state_date" tree_invisible="1"/>
 </tree>
